scratch/ftemp/style.css
@import url('https://fonts.googleapis.com/css2?family=M+PLUS+2:wght@100..900&family=Outfit:wght@100..900&display=swap');

:root {
  --font-primary: 'Outfit', sans-serif;
  --font-secondary: 'M PLUS 2', sans-serif;
  --color-fg: #333;
  --color-bg: #fafafa;
  --color-bga: #fafafacc;
  --color-accent: #2e2;
  --page-width: 1100px;
}

* {
  margin: 0; 
  padding: 0;
  box-sizing: border-box;
  /* outline: 1px dashed red;
  outline-offset: -2px; */
}

body {
  font-family: var(--font-primary);
  background: var(--color-bg);
  color: var(--color-fg);
  margin: 0 auto;
}

.top-bar-container {
  position: fixed;
  width: 100%;
  background: var(--color-fg);
  color: var(--color-bg);
  padding: 0 1em;
  top: 0;
  left: 0;
}

.top-bar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  font-size: 1rem;
  max-width: var(--page-width);
  margin: 0 auto;
}

.logo {
  border: .75em solid #8aa;
  border-radius: 50%;
  padding: .6em;
  aspect-ratio: 1 / 1;
  font-size: .5rem;
  margin: 1em;
  text-decoration: none;
  color: var(--color-bg);

  display: flex;
  justify-content: center;
  align-items: center;
}

.logo:hover {
  border: .75em solid #a8a;
}

.top-bar-menu-container {
  display: none;
}

.top-bar-menu a {
  text-decoration: none;
  margin-right: 1em;
  color: var(--color-bg);
  font-family: var(--font-secondary);
}

.top-bar-menu a:last-of-type {
  margin-right: 0;
}

.top-bar-menu a:hover {
  color: var(--color-accent);
}

.hamburger {
  display: none;
  width: max-content;
}

.hamburger:hover .patty {
  background: var(--color-accent);
}

.patty {
  width: 2rem;
  height: .125rem;
  background: var(--color-bg);
  margin: .45em 0;
}

/* Hero Container */

.hero-container {
  height: 100vh;
  max-width: var(--page-width);
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.hero-background {
  background-image: url("images/hamster1-2x.jpg");
  background-position: center;
  background-size: cover;
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100vh;
  z-index: -1;
  filter: brightness(100%) contrast(80%);
}

.hero-container > div {
  position: absolute;
  right: 0;
  padding: 3em;
}

.hero-title {
  font-weight: 200;
  font-size: 3.5rem;
}

.hero-subtitle {
  font-weight: 600;
}

main {
  max-width: var(--page-width);
  margin: 0 auto;
}

.row {
  margin-top: 12em;
  padding: 0 4em;
  display: grid;
  grid-template-columns: 1fr 1fr;
  place-items: center;
  gap: 3em;
}


.section-title {
  font-size: 1.5rem;
}

.row img {
  width: 100%;
  max-width: 450px;
  display: block;
}

.row p {
  margin: 2em 0;
  font-size: 1.2rem;
  font-weight: 300;
  max-width: 35ch;
}

.left {place-self: center left;}
.right {place-self: center right;}


.info-card-container {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  gap: 1em;
  padding: 0 1em;
  margin: 8em 0;
}

.info-card {
  padding: 2em;
  /* aspect-ratio: 1 / 1.2; */
  transition: all .25s;
  /* outline: 1px dashed red; */
}

.info-card:hover {
  transform: scale(1.05);
  box-shadow: 0 15px 20px -16px;
}

.info-card img {
  width: 100%;
  height: 40vmin;
  object-fit: contain;
}

.info-card-title {
  margin-top: .5em;
  margin-bottom: .25em;
  font-size: 1.25rem;
}

/* footer */
footer {
  position: relative;
  margin: 0 auto;
  margin-top: 5em;
  background: var(--color-fg);
  color: var(--color-bg);
  padding: 1.5em;
  padding-bottom: .5em;
}

.copyright {
  text-align: center;
  padding: 1em 0 .25em 0;
  font-size: .75rem;
  margin-top: .5em;
}

.social-menu {
  display: flex;
  justify-content: center;
  gap: 2em;
}

.social-icon {
  width: 1.5em;
  height: 1.5em;
  color: var(--color-bg);
  aspect-ratio: 1 / 1;
  text-decoration: none;
}

.social-icon img {
  display: block;
  width: 100%;
  filter: brightness(0) invert(98%);
}

@media (max-width: 700px) {
  
  .hero-container > div {
    /* position: absolute; */
    left: 0;
    right: 0;
    top: 3em;
  }

  .hero-title {
    font-size: calc(1.2rem + 3vw);
  }

  .hero-subtitle {
    font-size: calc(.5rem + 3vw);
  }

  .row {
    grid-template-columns: 1fr;
    padding: 0 1em;
  }

  .row > * {
    place-self: center !important;
  }

  .img-box {
    order: 1;
  }

  .text-box {
    order: 2;
  }

  .info-card-container {
    grid-template-columns: 1fr;
    padding: 0 4em;
  }
}

@media (max-width: 450px) {

  .hamburger {
    display: block;
    position: relative;
    z-index: 100;
    mix-blend-mode: difference;
  }

  .top-bar-menu-container {
    display: none;
    position: fixed;
    inset: 0;
    background: var(--color-bg);
  }

  #slide-menu {
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 0em;
    opacity: 1;
  }

  #top-menu {
    display: none;
  }

  .top-bar-menu a {
    color: var(--color-fg);
    text-align: center;
    margin: 0;
    padding: 1em 0;
    transition: background-color .125s;
    font-size: 2rem;
  }

  .top-bar-menu a:hover {
    background: var(--color-fg);
  }

  .info-card-container {
    display: grid;
    grid-template-columns: 1fr;
    gap: 1em;
    padding: 0 1em;
  }

  .info-card {
    aspect-ratio: 1 / 1;
  }

  .info-card-text {
    font-size: 1rem;
  }
}

